docs/apache-airflow-providers-slack/8.9.1/_sources/_api/airflow/providers/slack/notifications/slack/index.rst.txt
:py:mod:`airflow.providers.slack.notifications.slack`
=====================================================

.. py:module:: airflow.providers.slack.notifications.slack


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack.SlackNotifier




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack.ICON_URL
   airflow.providers.slack.notifications.slack.send_slack_notification


.. py:data:: ICON_URL
   :type: str
   :value: 'https://raw.githubusercontent.com/apache/airflow/2.5.0/airflow/www/static/pin_100.png'

   

.. py:class:: SlackNotifier(*, slack_conn_id = SlackHook.default_conn_name, text = 'This is a default message', channel = '#general', username = 'Airflow', icon_url = ICON_URL, attachments = (), blocks = (), base_url = None, proxy = None, timeout = None, retry_handlers = None, unfurl_links = True, unfurl_media = True)


   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`

   Slack BaseNotifier.

   :param slack_conn_id: Slack API token (https://api.slack.com/web).
   :param text: The content of the message
   :param channel: The channel to send the message to. Optional
   :param username: The username to send the message as. Optional
   :param icon_url: The icon to use for the message. Optional
   :param blocks: A list of blocks to send with the message. Optional
   :param timeout: The maximum number of seconds the client will wait to connect
       and receive a response from Slack. Optional
   :param base_url: A string representing the Slack API base URL. Optional
   :param proxy: Proxy to make the Slack API call. Optional
   :param retry_handlers: List of handlers to customize retry logic in ``slack_sdk.WebClient``. Optional
   :param attachments: (legacy) A list of attachments to send with the message. Optional
   :param unfurl_links: Option to indicate whether text url should unfurl. Optional
   :param unfurl_media: Option to indicate whether media url should unfurl. Optional

   .. py:attribute:: template_fields
      :value: ('text', 'channel', 'username', 'attachments', 'blocks')

      

   .. py:method:: hook()

      Slack Hook.


   .. py:method:: notify(context)

      Send a message to a Slack Channel.



.. py:data:: send_slack_notification

   

